ツイート詳細ページの実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,6 +10,8 @@ ja:
     attributes:
       tweet:
         content: 文章
+      comment:
+        content: 文章
   date:
     abbr_day_names:
     - 日
